Minimal install requires (#159)
* Py3 preparation: Universal wheel builds

* Prepare tox.ini for Django 1.11 and Python3

* Make setup.py conform to common expectations.

* Separate `install_requires` and `tests_require`
* Add trove classifiers including Python and Django supported versions
* Fix license name
* Dropped workaround for an ancient Python bug which doesn't apply anyway (not using multiprocessing or atexit)

* Add new release notes to Changelog

* Remove unused requirements.txt

* Remove requirements.txt from setup manifest.

* Update tox.ini

* Update setup.py

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,16 @@
 [tox]
-envlist = py27-django{17,18,19,110}
+# Django 1.11 and Python 3 aren't supported yet
+envlist =
+    py27-django{18,19,110,111}
+#    py32-django{18}
+#    py33-django{18}
+#    py{34,35}-django{19,110,111}
+#    py{36}-django{111}
 
 [testenv]
-commands = python testrunner.py
+commands = python setup.py test
 deps =
-    django17: Django < 1.8
-    django18: Django < 1.9
-    django19: Django < 1.10
-    django110: Django < 1.11
+    django18: Django>=1.8,<1.9
+    django19: Django>=1.9,<1.10
+    django110: Django>=1.10,<1.11
+    django111: Django>=1.11,<2.0
