--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-# Django 1.11 and Python 3 aren't supported yet
+# Python 3 isn't supported yet
 envlist =
     py27-django{18,19,110,111}
 #    py32-django{18}
