Don't fail CI because of missing intepreters

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,9 @@
 # require tox>=2.7 or refuse to run the tests.
 minversion=2.7
 
+# return success even if some of the specified environments are missing
+skip_missing_interpreters=True
+
 # The Django 1.8 series is the last to support Python 3.2 and 3.3.
 # Django 1.11 is the first release to support Python 3.6.
 # Due to the end of upstream support for Python 3.2 in February 2016, we won’t
