--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -2,7 +2,7 @@ steps:
   - label: ":python: Tests"
     timeout_in_minutes: 3
     commands:
-      - "pyenv install 2.7
+      - "pyenv install 2.7"
       - "pyenv install 3.4"
       - "pyenv install 3.5"
       - "pyenv install 3.6"
