--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -2,18 +2,13 @@ steps:
   - label: ":python: Tests"
     timeout_in_minutes: 10
     commands:
-      - "cd /.pyenv/plugins/python-build/../.. && git pull && cd -"
-      - "pyenv install 2.7.16"
-      - "pyenv install 3.4.10"
-      - "pyenv install 3.5.7"
-      - "pyenv install 3.6.9"
       - "pyenv global 2.7.16 3.4.10 3.5.7 3.6.9"
       - "python setup.py install"
       - "pip install tox"
       - "tox"
     plugins:
-      - docker#v3.3.0:
-          image: "themattrix/tox:latest"
+      docker-compose#v2.6.0:
+        run: app
     retry:
       automatic:
         - exit_status: -1  # Agent was lost
