--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -2,13 +2,13 @@ steps:
   - label: ":python: Tests"
     timeout_in_minutes: 10
     commands:
-      - "pyenv global 2.7.16 3.4.10 3.5.7 3.6.9"
+#      - "pyenv global 2.7.16 3.4.10 3.5.7 3.6.9"
 #      - "python setup.py install"
-      - "pip install tox"
+#      - "pip install tox"
       - "tox"
     plugins:
-      docker-compose#v2.6.0:
-        run: app
+      - docker#v3.3.0:
+          image: "n42org/docker-tox:3.4.0"
     retry:
       automatic:
         - exit_status: -1  # Agent was lost
