More tox config

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,15 @@ envlist =
     py36-django{1.11}
     pypy-django{1.8,1.9,1.10,1.11}
 
+[gh-actions]
+python =
+    2.7: py27
+    3.4: py34
+    3.5: py35
+    3.6: py36
+    3.8: py38
+    pypy: pypy
+
 [testenv]
 recreate=True
 usedevelop=False
