--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,19 +3,27 @@ name: Tests
 on: [push]
 
 jobs:
-  build:
+  tox:
     runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 4
+      matrix:
+        python-version: [2.7, 3.4, 3.5, 3.6, pypy]
 
     steps:
     - uses: actions/checkout@v2
     - name: Setup Redis
       uses: zhulik/redis-action@1.1.0
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install .
         pip install mock>=1.0.1
-        pip install tox>=2.3.1
+        python -m pip install tox tox-gh-actions
     - name: Run test suite with tox
       run: |
-        /home/runner/.local/bin/tox
+        tox
