Remove py33 and py34

--- a/tox.ini
+++ b/tox.ini
@@ -16,17 +16,12 @@ skip_missing_interpreters=True
 # Due to the end of upstream support for Python 3.2 in February 2016, we won’t
 # test Django 1.8.x on Python 3.2 after the end of 2016.
 envlist =
-    py27-django{1.8,1.9,1.10,1.11}
-    py33-django{1.8}
-    py34-django{1.8,1.9,1.10,1.11}
-    py35-django{1.8,1.9,1.10,1.11}
+    {py27,py35,pypy}-django{1.8,1.9,1.10,1.11}
     py36-django{1.11}
-    pypy-django{1.8,1.9,1.10,1.11}
 
 [gh-actions]
 python =
     2.7: py27
-    3.4: py34
     3.5: py35
     3.6: py36
     3.8: py38
