--- a/tox.ini
+++ b/tox.ini
@@ -16,15 +16,16 @@ skip_missing_interpreters=True
 # Due to the end of upstream support for Python 3.2 in February 2016, we won’t
 # test Django 1.8.x on Python 3.2 after the end of 2016.
 envlist =
-    {py27,py35,pypy}-django{1.8,1.9,1.10,1.11}
-    py36-django{1.11}
+    {py27,py35,py36,pypy2,pypy3}-django1.11
+    {py35,py36,pypy3}-django2.0
 
 [gh-actions]
 python =
     2.7: py27
     3.5: py35
     3.6: py36
-    pypy2: pypy
+    pypy2: pypy2
+    pypy3: pypy3
 
 [testenv]
 recreate=True
@@ -38,13 +39,9 @@ passenv=
 ignore_errors = True
 
 commands =
-    coverage erase
-    coverage run --branch --source={toxinidir}/experiments setup.py test
-    coverage report
+    python testrunner.py
 
 deps =
-    coverage
-    django1.8: Django>=1.8,<1.9
-    django1.9: Django>=1.9,<1.10
-    django1.10: Django>=1.10,<1.11
-    django1.11: Django>=1.11,<2.0
+    mock
+    django1.11: Django==1.11
+    django2.0: Django==2.0
