--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       max-parallel: 5
       matrix:
-        python-version: [2.7, 3.5, 3.6, pypy2]
+        python-version: [2.7, 3.5, 3.6, pypy2, pypy3]
 
     steps:
     - uses: actions/checkout@v2
@@ -22,7 +22,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
-        pip install mock>=1.0.1
         python -m pip install tox tox-gh-actions
     - name: Run test suite with tox
       run: |
