--- a/tox.ini
+++ b/tox.ini
@@ -5,18 +5,13 @@
 
 
 [tox]
-# require tox>=2.7 or refuse to run the tests.
 minversion=2.7
 
-# return success even if some of the specified environments are missing
 skip_missing_interpreters=True
 
-# The Django 1.8 series is the last to support Python 3.2 and 3.3.
-# Django 1.11 is the first release to support Python 3.6.
-# Due to the end of upstream support for Python 3.2 in February 2016, we won’t
-# test Django 1.8.x on Python 3.2 after the end of 2016.
 envlist =
     {py27,py35,py36,pypy2,pypy3}-django1.11
+    {py35,pypy2,pypy3}-django{1.8,1.9,1.10}
 
 [gh-actions]
 python =
@@ -27,19 +22,11 @@ python =
     pypy3: pypy3
 
 [testenv]
-recreate=True
-usedevelop=False
-passenv=
-    BUILD_NUMBER
-    BUILD_URL
-    XDG_CACHE_HOME
-
-# continue running commands even if previous commands have failed (ie: always produce coverage report)
-ignore_errors = True
-
 commands =
     python testrunner.py
 
 deps =
     mock
+    django1.9: Django==1.9
+    django1.10: Django==1.10
     django1.11: Django==1.11
