--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       max-parallel: 5
       matrix:
-        python-version: [2.7, 3.5, 3.6, pypy2, pypy3]
+        python-version: [2.7, 3.5, 3.6, 3.7, pypy2, pypy3]
 
     steps:
     - uses: actions/checkout@v2
