--- a/tox.ini
+++ b/tox.ini
@@ -10,13 +10,14 @@ minversion=2.7
 skip_missing_interpreters=True
 
 envlist =
-    {py27,py35,py36,pypy2,pypy3}-django1.11
+    {py27,py35,py36,py37,pypy2,pypy3}-django1.11
 
 [gh-actions]
 python =
     2.7: py27
     3.5: py35
     3.6: py36
+    3.7: py37
     pypy2: pypy2
     pypy3: pypy3
 
