--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,8 @@ jobs:
     strategy:
       max-parallel: 5
       matrix:
-        python-version: [2.7, 3.5, 3.6, 3.7, pypy2, pypy3]
+        python-version: ['3.5', '3.6', '3.7', '3.8', '3.9', '3.10', 'pypy-3.8', 'pypy-3.9']
+      fail-fast: false
 
     steps:
     - uses: actions/checkout@v2
