install jsonfield for tests in older Django version

--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,10 @@ commands =
 deps =
     mock
     django2.2: Django==2.2.*
+    django2.2: jsonfield>=1.0.3,<3
     django3.0: Django==3.0.*
+    django3.0: jsonfield>=1.0.3,<3
     django3.1: Django==3.1.*
+    django3.1: jsonfield>=1.0.3,<3
     django3.2: Django==3.2.*
     django4.0: Django==4.0.*
