fail on deprecated warnings during testing

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ python =
 
 [testenv]
 commands =
-    python testrunner.py
+    python -W error::DeprecationWarning testrunner.py
 
 deps =
     mock
