add missing migration, check them during testing

--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,7 @@ python =
 
 [testenv]
 commands =
+    python example_project/manage.py makemigrations --check --dry-run experiments
     python -W error::DeprecationWarning testrunner.py
 
 deps =
