--- a/tox.ini
+++ b/tox.ini
@@ -10,10 +10,13 @@ minversion=2.7
 skip_missing_interpreters=True
 
 envlist =
-    {py35,py36,py37,py38,pypy38,pypy39}-django{2.2}
-    {py36,py37,py38,py39,pypy38,pypy39}-django{3.0,3.1}
-    {py36,py37,py38,py39,py310,pypy38,pypy39}-django{3.2}
-    {py38,py39,py310,pypy38,pypy39}-django{4.0}
+    {py,pypy}{35,36,37,38}-django{2.2}
+    {py,pypy}{36,37,38,39}-django{3.0,3.1}
+    {py,pypy}{36,37,38,39,py310}-django{3.2}
+    {py,pypy}{38,39,310}-django{4.0}
+    {py,pypy}{38,39,310,311}-django{4.1}
+    {py,pypy}{38,39,310,311,312}-django{4.2}
+    {py,pypy}{310,311,312}-django{5.0}
 
 [gh-actions]
 python =
@@ -23,8 +26,12 @@ python =
     3.8: py38
     3.9: py39
     3.10: py310
+    3.11: py311
     pypy-3.8: pypy38
     pypy-3.9: pypy39
+    pypy-3.10: pypy310
+    pypy-3.11: pypy311
+    pypy-3.12: pypy312
 
 [testenv]
 commands =
@@ -41,3 +48,6 @@ deps =
     django3.1: jsonfield>=1.0.3,<3
     django3.2: Django==3.2.*
     django4.0: Django==4.0.*
+    django4.1: Django==4.1.*
+    django4.2: Django==4.2.*
+    django5.0: Django==5.0.*
